--- a/.settings/org.eclipse.php.core.prefs
+++ b/.settings/org.eclipse.php.core.prefs
@@ -1,3 +1,3 @@
-#Tue Mar 30 19:14:00 PDT 2010
+#Mon Aug 16 17:38:13 PDT 2010
 eclipse.preferences.version=1
-include_path=0;/JPL-MVC
+include_path=0;/JPL-MVC\u00050;/JPL-MVC/lib
