--- a/.settings/org.eclipse.php.core.prefs
+++ b/.settings/org.eclipse.php.core.prefs
@@ -1,2 +1,2 @@
 eclipse.preferences.version=1
-include_path=1;C\:/Program Files (x86)/Zend/Zend Studio - 8.0.0/plugins/com.zend.php.phpunit_8.0.0.v20100913-0100/resources/library/PHPUnit\u00050;/EternalMVC
+include_path=0;/e
