--- a/build.xml
+++ b/build.xml
@@ -116,8 +116,6 @@
 		<exec dir="${basedir}" executable="phpdoc" failonerror="false">
 			<arg value="run" />
 			<arg value="--sourcecode" />
-			<arg value="--template" />
-			<arg value="responsive" />
 			<arg value="-i" />
 			<arg value="${basedir}/tests/*,${basedir}/build/*" />
 			<arg value="-e" />
@@ -132,7 +130,7 @@
 	<target name="phpunit" description="Run unit tests with PHPUnit">
 		<exec dir="${basedir}/tests" executable="phpunit" failonerror="true">
 			<arg
-				line="--log-junit ${basedir}/build/logs/phpunit.xml
+				line="--log-junit ${basedir}/build/logs/junit.xml
                        --coverage-clover ${basedir}/build/logs/clover.xml
                        --coverage-html ${basedir}/build/coverage
                        --exclude ${basedir}/index.php" />
