EMVC-2 Removed the --template flage since it is gone.  Changed the file name for phpunit output to junit.xml from phpunit.xml

--- a/build.xml
+++ b/build.xml
@@ -121,7 +121,11 @@
 			<arg value="-e" />
 			<arg value="php" />
 			<arg value="-d" />
-			<arg value="${basedir}/" />
+			<arg value="${basedir}/lib/" />
+			<arg value="-d" />
+			<arg value="${basedir}/Controller/" />
+			<arg value="-d" />
+			<arg value="${basedir}/Model/ " />
 			<arg value="-t" />
 			<arg value="${basedir}/build/api" />
 		</exec>
