--- a/build.xml
+++ b/build.xml
@@ -118,8 +118,6 @@
 			<arg value="--sourcecode" />
 			<arg value="-i" />
 			<arg value="${basedir}/tests/*,${basedir}/build/*" />
-			<arg value="-e" />
-			<arg value="php" />
 			<arg value="-d" />
 			<arg value="${basedir}/lib/" />
 			<arg value="-d" />
@@ -133,10 +131,9 @@
 
 	<target name="phpunit" description="Run unit tests with PHPUnit">
 		<exec dir="${basedir}/tests" executable="phpunit" failonerror="true">
-			<arg
-				line="--log-junit ${basedir}/build/logs/junit.xml
-                       --coverage-clover ${basedir}/build/logs/clover.xml
-                       --coverage-html ${basedir}/build/coverage
+			<arg line="--log-junit ${basedir}/build/logs/junit.xml \
+                       --coverage-clover ${basedir}/build/logs/clover.xml \
+                       --coverage-html ${basedir}/build/coverage \
                        --exclude ${basedir}/index.php" />
 		</exec>
 	</target>
